--- a/content/posts/cara-menambahkan-shapefile-atau-raster-ke-halaman-kerja/index.mdx
+++ b/content/posts/cara-menambahkan-shapefile-atau-raster-ke-halaman-kerja/index.mdx
@@ -4,19 +4,19 @@ date: 2022-10-03 2100
 tags: ["mapping", "design"]
 ---
 
-<br>
+<br/>
 
  Sebuah **shapefile** biasanya terdiri dari kumpulan file yang berekstensi *". shp", ". shx", ". dbf"*, dan ekstensi lainnya pada sebuah nama yang sama (e.g. , "jalan. *"). Saat penggunaan, shapefile sebenarnya yang rujuk adalah yang berekstensi **". shp"**, namun file ini tidak lengkap dan membutuhkan file lainnya [(DBPedia)](http://id.dbpedia.org/page/Shapefile). **Raster** merupakan data yang dapat berbentuk gambar atau pun citra. Raster dalam pemetaan dapat berupa gambar rupa bumi, data ketinggian seperti dem dan lain-lain.
-<br>
+<br/>
 Cara untuk menambahkan data-data tersebut ke dalam halaman kerja ArcMap akan dijelaskan sebagai berikut.
 
-<br>
+<br/>
 
 ### 1. Membuat Halaman Kerja Baru
 
 Membuat halaman kerja baru dengan cara klik menu **File** kemudian New atau menggunakan shortcut *Ctrl + N*.
 
-<br>
+<br/>
 
 ### 2. Menentukan Format Koordinat
 
@@ -24,39 +24,39 @@ Menentukan koordinat yang akan digunakan dengan cara sebagai berikut:
 
 a. Aktifkan *Table Of Contents* dengan cara klik menu **Windows** kemudian klik *Table Of Contents*
 
-![](./1.png)<br>
+![](./1.png)<br/>
 
 b. Pada panel *Table of Contents* klik kanan pada **Layers** dan pilih *Properties*
 
-![](./2.png)<br>
+![](./2.png)<br/>
 
 c. Pada jendela properties pilih *Coordinate System, Geographic Coordinate Systems, World, WGS 1984.* Dapat juga dipilih sesuai dengan yang diinginkan.
 
-![](./koordinat.png)<br>
+![](./koordinat.png)<br/>
 
 ### 3. Menambahkan data-data
 
 Untuk menambahkan data-data yang diperlukan pada halaman kerja, kita perlu menggunakan menu tambah seperti ini.
 
-![](./6.png)<br>
+![](./6.png)<br/>
 
-![](./7.png)<br>
+![](./7.png)<br/>
 
 Kemudian akan terbuka jendela baru yang menampilkan folder, maka kita hanya perlu mencari folder dimana file-file yang diperlukan berada. Salah satunya seperti folder Demnas_ seperti ini.
 
-![](./8.png)<br>
+![](./8.png)<br/>
 
 Select file yang diinginkan lalu klik ok dan jangan mengklik dua kali pada file karena itu tidak akan menambahkan file ke halaman kerja. Contoh lainnya adalah folder DATA SHP seperti ini.
 
-![](./9.png)<br>
+![](./9.png)<br/>
 
 Setelah kita menambahkan beberapa file maka pada Table of contents akan terlihat seperti ini.
 
-![](./10.png)<br>
+![](./10.png)<br/>
 
 Dengan demikian kita telah berhasil menambahkan beberapa file yang dibutuhkan ke dalam halaman kerja ArcMap.
 
-<br>
+<br/>
 
 Terima kasih telah membaca artikel ini.
 
