--- a/content/posts/cara-membuat-pdf-yang-memiliki-akses-terbatas/index.mdx
+++ b/content/posts/cara-membuat-pdf-yang-memiliki-akses-terbatas/index.mdx
@@ -5,104 +5,104 @@ tags: ["writting", "utilities"]
 ---
 
 
-<br>
+<br/>
 
 Portable Document Format (disingkat PDF) adalah sebuah format berkas yang dibuat oleh Adobe Systems pada tahun 1993 untuk keperluan pertukaran dokumen digital. Format PDF digunakan untuk merepresentasikan dokumen dua dimensi yang meliputi teks, huruf, citra dan grafik vektor dua dimensi [(***Wikipedia***)](https://id.wikipedia.org/wiki/Portable_Document_Format).
 
-<br>
+<br/>
 
 Terdapat banyak cara untuk membuat file pdf, salah satunya dengan aplikasi Adobe Acrobat. Kali ini kita akan membahas cara membuat pdf yang terdapat batasan akses terhadap isi filenya, seperti tidak bisa di-*copy*, di-*edit*, dll. PDF yang kita buat kali ini berasal dari dokumen yang kita buat dengan MS Word. Tentunya harus memiliki kedua aplikasi tersebut dan plugin Acrobat pada MS Word.
 
-<br>
+<br/>
 
 Berikut akan dijelaskan tahapan untuk membuat file pdf yang memiliki batasan akses dengan password.
 
-<br>
+<br/>
 
 ### 1. Menyiapkan File Dokumen Word
 
 File ini dapat disiapkan seperti biasanya kita menuliskan sebuah dokumen dengan ms word. Kemudian menyimpan file tersebut dengan format biasa, yaitu format *.doc* atau *.docx*.
 
-<br>
+<br/>
 
 ### 2. Menyesuaikan Pengaturan PDF
 
 Pada Menubar ms word arahkan pada menu Acrobat seperti gambar ini.
 
-![](./1.png)<br>
+![](./1.png)<br/>
 
 Kemudian pilih menu *Preferences*, seperti gambar ini.
 
-![](./2.png)<br>
+![](./2.png)<br/>
 
 Setelah terbuka jendela baru, arahkan pada tab *Security*, seperti gambar  ini.
 
-![](./3.png)<br>
+![](./3.png)<br/>
 
 Bagian atas jendela ini terdapat pengaturan untuk memberikan batasan penuh. Apabila kita menggunakan fitur ini maka untuk membuka filenya saja memerlukan password, kali ini kita tidak mengaktifkan fitur ini dengan tidak mencentang pada bagian ini.
 
-![](./4.png)<br>
+![](./4.png)<br/>
 
 Bagian selanjutnya adalah bagian yang akan kita sesuaikan untuk kebutuhan batasan akses pada file pdf kali ini.
 
-![](./5.png)<br>
+![](./5.png)<br/>
 
 Pastikan kita mencentang pada bagian seperti pada gambar ini.
 
-![](./6.png)<br>
+![](./6.png)<br/>
 
 Berikan password sesuai dengan yang diinginkan. Pada bagian ini kita mulai memberikan batasan yang kita inginkan. Mulai dari membatasi resolusi untuk proses pencetakan file atau tidak memberikan izin untuk mencetak, seperti gambar ini.
 
-![](./7.png)<br>
+![](./7.png)<br/>
 
 Pilihan resolusi untuk proses cetak seperti yang terlihat pada gambar ini.
 
-![](./8.png)<br>
+![](./8.png)<br/>
 
 Kemudian untuk *Changes Allowed* atau perubahan yang diizinkan terdapat pilihan seperti gambar ini.
 
-![](./9.png)<br>
+![](./9.png)<br/>
 
 Jika kita ingin file pdf tidak dapat di-*copy* pastikan kita tidak mencentang pada bagian seperti gambar ini.
 
-![](./10.png)<br>
+![](./10.png)<br/>
 
 Bagian selanjutnya dapat disesuaikan sebagaimana mestinya.
 
-![](./11.png)<br>
+![](./11.png)<br/>
 
 Jika dirasa semuanya sudah beres maka kita dapat melanjutkan ke tahapan selanjutnya dengan mengklik **Ok** dan mengorfirmasi password seperti gambar ini.
 
-![](./12.png)<br>
+![](./12.png)<br/>
 
 ### 3. Membuat File PDF
 
 Setelah mengorfirmasi password pilih menu Create PDF seperti gambar ini.
 
-![](./13.png)<br>
+![](./13.png)<br/>
 
 Apabila kita membuat pdf sebelum menyimpan file dokumen maka akan diminta untuk menyimpannya terlebih dahulu dalam format ms word, seperti gambar ini.
 
-![](./14.png)<br>
+![](./14.png)<br/>
 
 Kemudian kita akan menyimpan file dalam format *.pdf*, seperti gambar ini.
 
-![](./15.png)<br>
+![](./15.png)<br/>
 
 Pastikan **Restrict Editing** tercentang, seperti gambar ini.
 
-![](./16.png)<br>
+![](./16.png)<br/>
 
 Klik **Ok**, maka akan keluar jendela *process bar* seperti ini.
 
-![](./17.png)<br>
+![](./17.png)<br/>
 
 Selanjutnya, tinggal menunggu hingga proses selesai. Jika sudah selesai kita dapat melihat tanda (SECURED) pada file pdf yang dibuka, seperti gambar di bawah ini.
 
-![](./18.png)<br>
+![](./18.png)<br/>
 
 Dengan demikian kita telah berhasil membuat file PDF yang memiliki batasan akses dengan password.
 
-<br>
+<br/>
 
 Terima kasih telah membaca artikel ini.
